home insurance methods updated

--- a/src/main/resources/templates/carList.html
+++ b/src/main/resources/templates/carList.html
@@ -152,7 +152,7 @@
 					<!--					<td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">-->
 					<!--							<a th:href="@{/deleteCar/{id}(id=${c.id})}"><i id="icon-trash" class="gg-trash"></i></a></button></td>-->
 					<!--						<td><button><a th:href="@{/deleteCar/{id}(id=${c.id})}"><i id="icon-trash" class="gg-trash"></i></a></button></td>	-->
-					<td><button class="mx-auto"><a th:href="@{/insuranceRefund/{id}(id=${c.id})}"><i id="icon-trash"
+					<td><button class="mx-auto"><a th:href="@{/trafficInsuranceRefund/{id}(id=${c.id})}"><i id="icon-trash"
 									class="gg-trash"></i></a></button></td>
 
 					<!--					 Modal -->
