--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -99,7 +99,7 @@
 			<div class="product text-center col-lg-3 col-md-4 col-12">
 				<img class="img-fluid mb-3" src="img/dask.jpg" alt="">
 				<h5 class="p-name">Home Insurance</h5>
-				<button class="buy-btn"><a th:href="@{/homeInsuranceForm(customerId = ${customerId})}">Get Offer</button>
+				<button class="buy-btn"><a th:href="@{/homeInsuranceForm(customerId = ${customerId})}">Get Offer</a></button>
 
 			</div>
 		</div>
@@ -108,7 +108,7 @@
 	<!-- Footer -->
 	<footer class="mt-4 py-4">
 		<div class="row container mx-auto pt-4">
-			<div class="footer-one col-lg-3 col-md-5 col-12">
+			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
 				<img src="img/logo.png" alt="">
 				<p class="pt-3">Protect your future with reliable insurance coverage from our trusted insurance
 					company..</p>
