--- a/src/main/resources/templates/homeList.html
+++ b/src/main/resources/templates/homeList.html
@@ -5,12 +5,6 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SBM Home</title>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-		crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
 		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 		crossorigin="anonymous"></script>
@@ -95,28 +89,32 @@
 					<th cope="col">Neighbourhood</th>
 					<th cope="col">Building Number</th>
 					<th scope="col">Apartment</th>
+					<th cope="col">Flat Area (m2)</th>
 					<th scope="col">Floor</th>
 					<th scope="col">Building Age</th>
 					<th scope="col">Owner Title</th>
-					<th scope="col">See Insurance Details</th>
-<!--					<th scope="col">Delete</th>-->
+					<th scope="col">Delete</th>
+					<th scope="col">See Insurance Details</th>					
 				</tr>
 			</thead>
 			<tbody>
 				<tr th:each="h :${home}">
 					<td th:text="${h.homeId}"></td>
 					<td th:text="${h.customerId}"></td>
-					<td th:text="${h.type}"></td>
+					<td th:text="${h.buildingType}"></td>
 					<td th:text="${h.typeOfUse}"></td>
 					<td th:text="${h.province}"></td>
 					<td th:text="${h.district}"></td>
 					<td th:text="${h.neighbourhood}"></td>
 					<td th:text="${h.buildingNumber}"></td>
 					<td th:text="${h.apartment}"></td>
+					<td th:text="${h.flatArea}"></td>
 					<td th:text="${h.floor}"></td>
 					<td th:text="${h.buildingAge}"></td>
-					<td th:text="${h.ownerTitle}"></td>
-					<td><button class="mx-auto"><a th:href="@{/seeHomeInsuranceDetails/{id}(id=${h.customerId})}"><i class="fa-solid fa-ellipsis"></i></a></button></td>
+					<td th:text="${h.insurerTitle}"></td>
+					<td><button class="mx-auto"><a th:href="@{/deleteHome/{id}(id=${h.homeId})}"><i id="icon-trash"
+									class="gg-trash"></i></a></button></td>
+					<td><button class="mx-auto"><a th:href="@{/seeHomeInsuranceDetails/{id}(id=${h.homeId})}"><i class="fa-solid fa-ellipsis"></i></a></button></td>					
 <!--					<td><button class="mx-auto"><a th:href="@{/insuranceRefund/{id}(id=${h.id})}"><i id="icon-trash"-->
 <!--									class="gg-trash"></i></a></button></td>-->
 				</tr>
