--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -106,7 +106,7 @@
 	<!-- Footer -->
 	<footer class="mt-4 py-4">
 		<div class="row container mx-auto pt-4">
-			<div class="footer-one col-lg-3 col-md-5 col-12">
+			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
 				<img src="img/logo.png" alt="">
 				<p class="pt-3">Protect your future with reliable insurance coverage from our trusted insurance
 					company..</p>
