--- a/src/main/resources/templates/seeHomeInsuranceDetails.html
+++ b/src/main/resources/templates/seeHomeInsuranceDetails.html
@@ -3,19 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SBM Home</title>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-		crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-	<script src="https://unpkg.com/@phosphor-icons/web"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
@@ -114,7 +102,6 @@
 					<th scope="col">Insurance Id</th>
 					<th scope="col">Insurance Type</th>
 					<th scope="col">Customer Id</th>
-					<th scope="col">Car Id</th>
 					<th scope="col">Home Id</th>
 					<th cope="col">Offer</th>
 					<th cope="col">Result</th>
@@ -130,14 +117,13 @@
 					<td th:text="${i.insuranceId}"></td>
 					<td th:text="${i.insuranceType}"></td>
 					<td th:text="${i.customerId}"></td>
-					<td th:text="${i.carId}"></td>
 					<td th:text="${i.homeId}"></td>
 					<td th:text="${i.offer}"></td>
 					<td th:text="${i.result}"></td>
 					<td th:text="${i.startDate}"></td>
 					<td th:text="${i.endDate}"></td>
 					<td th:text="${i.period}"></td>
-					<td><button class="mx-auto"><a th:href="@{/deleteHomeInsurance/{id}(id=${i.insuranceId})}"><i id="icon-trash"
+					<td><button class="mx-auto"><a th:href="@{/homeInsuranceRefund/{id}(id=${i.homeId})}"><i id="icon-trash"
 									class="gg-trash"></i></a></button></td>
 				</tr>
 			</tbody>
