--- a/src/main/resources/templates/homeInsuranceForm.html
+++ b/src/main/resources/templates/homeInsuranceForm.html
@@ -43,7 +43,8 @@
 			<div class="textIntro">
 				<h1 class="text-center">Home Insurance Form</h1>
 				<p ng-show="msg">{{msg}}</p>
-				<!--				<div class="alert alert-warning" role="alert" th:if="${showAlert}"> This license plate number is already registered! </div>-->
+				<div class="alert alert-warning" role="alert" th:if="${showHomeAlert}"> This home address is
+					already registered! </div>
 			</div>
 
 			<form th:action="@{/homeRegister}" th:object="${home}" method="post" name="myForm" ng-submit="register()">
@@ -53,62 +54,63 @@
 					<h4 th:text="${customerId}">idParam</h4>
 				</div>
 
-				<input type="number" name="flatArea" placeholder="Flat Area (m2)*" ng-model="flatArea"
+				<input type="number" id="flatArea" name="flatArea" placeholder="Flat Area (m2)*" ng-model="flatArea"
 					ng-required="true">
-				<p class="error" ng-show="myForm.flatArea.$invalid && myForm.flatArea.$touched">Fill out your
-					flat area.</p>
+				<p class="error" ng-show="myForm.flatArea.$invalid && myForm.flatArea.$touched">Fill out your flat area.</p>
 
-				<select name="buildingType" ng-model="buildingType" ng-required="true">
-					<option value="">Select Building Type*</option>
+				<select name="buildingType" id="buildingType">
+					<option value="" th:selected="${#fields.hasErrors('buildingType')}">Select Building Type*</option>
 					<option ng-repeat="option in buildingTypes" value="{{option}}">{{option}}</option>
 				</select>
+				<p th:if="${#fields.hasErrors('buildingType')}" th:errorclass="error" th:errors="*{buildingType}" />
 
-				<select name="typeOfUse" ng-model="typeOfUse" ng-required="true">
-					<option value="">Select Type Of Use*</option>
+				<select name="typeOfUse" id="typeOfUse" >
+					<option value="" th:selected="${#fields.hasErrors('typeOfUse')}">Select Type Of Use*</option>
 					<option ng-repeat="option in typesOfUse" value="{{option}}">{{option}}</option>
 				</select>
+				<p th:if="${#fields.hasErrors('typeOfUse')}" th:errorclass="error" th:errors="*{typeOfUse}" />
+				
+				<select name="province" id="province">
+					<option value="" th:selected="${#fields.hasErrors('province')}">Select Province*</option>
+				</select>
+				<p th:if="${#fields.hasErrors('province')}" th:errorclass="error" th:errors="*{province}" />
 
-				<input type="text" name="province" placeholder="Province*" ng-model="province" ng-required="true"
-					ng-pattern="/^[a-zA-Z]*$/">
-				<p class="error" ng-show="myForm.province.$invalid && myForm.province.$touched">Fill out your
-					usage.</p>
+				<select name="district" id="district">
+					<option value="" th:selected="${#fields.hasErrors('district')}">Select District*</option>
+				</select>
+				<p th:if="${#fields.hasErrors('district')}" th:errorclass="error" th:errors="*{district}" />
 
-				<input type="text" name="district" placeholder="District*" ng-model="district" ng-required="true"
-					ng-pattern="/^[a-zA-Z]*$/">
-				<p class="error" ng-show="myForm.district.$invalid && myForm.district.$touched">Fill out your
-					usage.</p>
-
-				<input type="text" name="neighbourhood" placeholder="Neighbourhood*" ng-model="neighbourhood"
+				<input type="text" id="neighbourhood" name="neighbourhood" th:field="*{neighbourhood}" placeholder="Neighbourhood*" ng-model="neighbourhood"
 					ng-required="true" ng-pattern="/^[a-zA-Z]*$/">
 				<p class="error" ng-show="myForm.neighbourhood.$invalid && myForm.neighbourhood.$touched">Fill out your
-					usage.</p>
+					neighbourhood.</p>
+				<p th:if="${#fields.hasErrors('neighbourhood')}" th:errorclass="error" th:errors="*{neighbourhood}" />
 
-				<input type="number" name="buildingNumber" placeholder="Building Number*" ng-model="buildingNumber"
+				<input type="number" id="buildingNumber" name="buildingNumber" placeholder="Building Number*" ng-model="buildingNumber"
 					ng-required="true">
-				<p class="error" ng-show="myForm.buildingNumber.$invalid && myForm.buildingNumber.$touched">Fill out
-					your
-					building number.</p>
+				<p class="error" ng-show="myForm.buildingNumber.$invalid && myForm.buildingNumber.$touched">Fill out your building number.</p>
 
-				<input type="number" name="apartment" placeholder="Apartment*" ng-model="apartment" ng-required="true">
+				<input type="number" id="apartment" name="apartment" placeholder="Apartment*" ng-model="apartment" ng-required="true">
 				<p class="error" ng-show="myForm.apartment.$invalid && myForm.apartment.$touched">Fill out your
 					apartment.</p>
 
-				<input type="number" name="buildingAge" placeholder="Building Age*" ng-model="buildingAge"
+				<input type="number" id="buildingAge" name="buildingAge" placeholder="Building Age*" ng-model="buildingAge"
 					ng-required="true" max="50">
 				<p class="error" ng-show="myForm.buildingAge.$invalid && myForm.buildingAge.$touched">Fill out your
 					building age.</p>
 
-				<select name="floor" ng-model="floor" ng-required="true">
-					<option value="">Select Building Floors*</option>
+				<select name="floor" id="floor">
+					<option value="" th:selected="${#fields.hasErrors('floor')}">Select Building Floors*</option>
 					<option ng-repeat="option in floors" value="{{option}}">{{option}}</option>
 				</select>
 
-				<select name="insurerTitle" ng-model="insurerTitle" ng-required="true">
-					<option value="">Select Title of Insurer*</option>
+				<select name="insurerTitle" id="insurerTitle">
+					<option value="" th:selected="${#fields.hasErrors('insurerTitle')}">Select Title of Insurer*</option>
 					<option ng-repeat="option in titles" value="{{option}}">{{option}}</option>
 				</select>
-				
-				<select name="period" ng-model="period" ng-required="true">
+				<p th:if="${#fields.hasErrors('insurerTitle')}" th:errorclass="error" th:errors="*{insurerTitle}" />
+
+				<select name="period" id="period" ng-model="period" ng-required="true">
 					<option value="">Select Insurance Period (Day)*</option>
 					<option ng-repeat="option in periods" value="{{option}}">{{option}}</option>
 				</select>
