--- a/src/main/resources/templates/homeList.html
+++ b/src/main/resources/templates/homeList.html
@@ -8,12 +8,20 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
 		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 		crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<script src="https://unpkg.com/@phosphor-icons/web"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
 	<link href="https://css.gg/css" rel="stylesheet" />
+
+
 	<style>
 		#icon-trash {
 			color: red;
@@ -40,7 +48,7 @@
 	</style>
 
 	<script>
-		
+
 		window.onload = function () {
 			$(document).ready(function () {
 				$('#myModal').modal('show');
@@ -74,9 +82,32 @@
 			</div>
 		</div>
 	</nav>
-	<!--End Navbar-->		
+	<!--End Navbar-->
 
 	<div class="container mt-5">
+		<div class="modal fade" id="myModal" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog"
+			aria-labelledby="myModalTitle" aria-hidden="true" th:if="${showText}">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="myModalTitle">Bildirim</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<p>Listelenen Konutlarınızın Sigorta Süresi Bitmiştir:</p>
+						<ul>
+							<li th:each="data : ${expiredHomes}" th:text="${data.getHomeId()}"></li>
+						</ul>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<table class="table table-hover text-center">
 			<thead>
 				<tr>
@@ -94,7 +125,7 @@
 					<th scope="col">Building Age</th>
 					<th scope="col">Owner Title</th>
 					<th scope="col">Delete</th>
-					<th scope="col">See Insurance Details</th>					
+					<th scope="col">See Insurance Details</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -114,16 +145,17 @@
 					<td th:text="${h.insurerTitle}"></td>
 					<td><button class="mx-auto"><a th:href="@{/deleteHome/{id}(id=${h.homeId})}"><i id="icon-trash"
 									class="gg-trash"></i></a></button></td>
-					<td><button class="mx-auto"><a th:href="@{/seeHomeInsuranceDetails/{id}(id=${h.homeId})}"><i class="fa-solid fa-ellipsis"></i></a></button></td>					
-<!--					<td><button class="mx-auto"><a th:href="@{/insuranceRefund/{id}(id=${h.id})}"><i id="icon-trash"-->
-<!--									class="gg-trash"></i></a></button></td>-->
+					<td><button class="mx-auto"><a th:href="@{/seeHomeInsuranceDetails/{id}(id=${h.homeId})}"><i
+									class="fa-solid fa-ellipsis"></i></a></button></td>
+					<!--					<td><button class="mx-auto"><a th:href="@{/insuranceRefund/{id}(id=${h.id})}"><i id="icon-trash"-->
+					<!--									class="gg-trash"></i></a></button></td>-->
 				</tr>
 			</tbody>
 		</table>
 	</div>
 	</div>
 
-	
+
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
 		crossorigin="anonymous"></script>
