--- a/src/main/resources/templates/seeHomeInsuranceDetails.html
+++ b/src/main/resources/templates/seeHomeInsuranceDetails.html
@@ -54,7 +54,11 @@
 
 	<div class="container mt-4">
 		<div class="alert alert-warning" role="alert" th:if="${showText}"> An insurance for this house has already been defined! </div>
-		<button type="button" class="btn btn-info text-white mb-2"><a class="text-decoration-none" th:href="@{/newHomeInsuranceCalculate/{id}(id=${homeId})}"><strong>Create New Home Insurance</strong></a></button>
+		<button type="button" class="btn btn-info text-white mb-2" style="background-color: rgb(62, 209, 221); font-size: 17px; padding: 10px 20px;">
+			<a class="text-decoration-none" th:href="@{/newHomeInsuranceCalculate/{id}(id=${homeId})}">
+				<strong>Create New Home Insurance</strong>
+			</a>
+		</button>
 
 		<table class="table table-hover text-center">
 			<thead>
