KDV rate added to the calculation

--- a/src/main/resources/templates/carList.html
+++ b/src/main/resources/templates/carList.html
@@ -18,11 +18,14 @@
 	<script src="https://unpkg.com/@phosphor-icons/web"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+	<!-- Boxicons CSS -->
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
 	<link href="https://css.gg/css" rel="stylesheet" />
 	<style>
 		#icon-trash {
 			color: red;
+			font-size: 22px;
 		}
 
 		#icon-trash:hover {
@@ -153,7 +156,7 @@
 					<!--							<a th:href="@{/deleteCar/{id}(id=${c.id})}"><i id="icon-trash" class="gg-trash"></i></a></button></td>-->
 					<!--						<td><button><a th:href="@{/deleteCar/{id}(id=${c.id})}"><i id="icon-trash" class="gg-trash"></i></a></button></td>	-->
 					<td><button class="mx-auto"><a th:href="@{/trafficInsuranceRefund/{id}(id=${c.id})}"><i id="icon-trash"
-									class="gg-trash"></i></a></button></td>
+									class="bx bx-trash"></i></a></button></td>
 
 					<!--					 Modal -->
 					<!--					<div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false"-->
