--- a/src/main/resources/templates/customerList.html
+++ b/src/main/resources/templates/customerList.html
@@ -18,11 +18,14 @@
 	<script src="https://unpkg.com/@phosphor-icons/web"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+	<!-- Boxicons CSS -->
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
 	<link href="https://css.gg/css" rel="stylesheet" />
 	<style>
 		#icon-trash {
 			color: red;
+			font-size: 22px;
 		}
 
 		#icon-trash:hover {
@@ -119,7 +122,7 @@
 					<td><button class="mx-auto"><a th:href="@{/editCustomer/{customerId}(customerId=${c.customerId})}"><i id="icon-edit"
 									class="fa-regular fa-pen-to-square"></i></a></button></td>
 					<td><button class="mx-auto"><a th:href="@{/deleteCustomer/{customerId}(customerId=${c.customerId})}"><i id="icon-trash"
-									class="gg-trash"></i></a></button></td>																							
+									class="bx bx-trash"></i></a></button></td>																							
 				</tr>
 			</tbody>
 		</table>		
