--- a/src/main/resources/templates/homeList.html
+++ b/src/main/resources/templates/homeList.html
@@ -18,6 +18,8 @@
 	<script src="https://unpkg.com/@phosphor-icons/web"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+	<!-- Boxicons CSS -->
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
 	<link href="https://css.gg/css" rel="stylesheet" />
 
@@ -25,6 +27,7 @@
 	<style>
 		#icon-trash {
 			color: red;
+			font-size: 22px;
 		}
 
 		#icon-trash:hover {
@@ -144,11 +147,9 @@
 					<td th:text="${h.buildingAge}"></td>
 					<td th:text="${h.insurerTitle}"></td>
 					<td><button class="mx-auto"><a th:href="@{/deleteHome/{id}(id=${h.homeId})}"><i id="icon-trash"
-									class="gg-trash"></i></a></button></td>
+									class="bx bx-trash"></i></a></button></td>
 					<td><button class="mx-auto"><a th:href="@{/seeHomeInsuranceDetails/{id}(id=${h.homeId})}"><i
 									class="fa-solid fa-ellipsis"></i></a></button></td>
-					<!--					<td><button class="mx-auto"><a th:href="@{/insuranceRefund/{id}(id=${h.id})}"><i id="icon-trash"-->
-					<!--									class="gg-trash"></i></a></button></td>-->
 				</tr>
 			</tbody>
 		</table>
